# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-04-13 09:39:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      handlers, optimize CSV deserialization
    Revision:
      itools--main--0.7--patch-64

    Separate the parsing from the load. Now there is a generator
    ("CSV.parse") independent of the CSV handler class, which can
    be used by specialized handler classes to load the resource
    in one step.
    
    Also, now "Text.guess_encoding" is a class method, so it can
    be used without a "Text" instance.

    modified files:
     Changelog handlers/CSV.py handlers/Text.py


2005-04-12 21:49:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      handlers, optimize CSV serialization
    Revision:
      itools--main--0.7--patch-63


    modified files:
     Changelog handlers/CSV.py


2005-03-31 13:45:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      catalog, fix so indexes are the same for big and little endian
    Revision:
      itools--main--0.7--patch-62

    The "IO.encode_character" and "IO.decode_character" now work on
    little endian, even if the system is big endian. This way a catalog
    instance can be exchanged between little and big endian systems.

    modified files:
     Changelog catalog/IO.py


2005-03-23 14:41:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      catalog, fix 'unindex_term'
    Revision:
      itools--main--0.7--patch-61

    The sequence:
    
      index_document(x)
      unindex_document(n)
    
    Where "n" is the document number assigned to "x", led the catalog to
    an inconsistent state, because the terms were labeled for unindexing
    when they were not indexed in the catalog.

    modified files:
     Changelog catalog/IIndex.py


2005-03-22 08:06:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary: